--- a/pages/circle-chords/style.scss
+++ b/pages/circle-chords/style.scss
@@ -54,6 +54,9 @@ a {
 
 main {
 	padding: 0 3rem;
+	@media (max-width: $mobileCut) {
+		padding: 0 2rem;
+	}
 }
 
 header {
@@ -63,6 +66,9 @@ header {
 		margin: 3rem 0;
 		color: $highlightColor;
 	}
+	p {
+		line-height: 1.5rem;
+	}
 }
 
 footer {
@@ -70,6 +76,9 @@ footer {
 		color: $mainColor;
 		margin: 3rem 0;
 		text-align: right;
+		@media (max-width: $mobileCut) {
+			text-align: center;
+		}
 	}
 }
 
@@ -193,7 +202,7 @@ footer {
 			transform: rotate(10deg);
 		}
 	}
-	@media (max-width:500px) {
+	@media (max-width: $mobileCut) {
 		&:hover .octo-arm {
 			animation: none;
 		}
