--- a/pages/circle-chords/style.scss
+++ b/pages/circle-chords/style.scss
@@ -102,6 +102,13 @@ footer {
 				}
 			}
 		}
+		&.is-playing {
+			svg .center, svg:hover .center {
+				animation: none;
+				transform: scale(10);
+				fill: $highlightColor;
+			}
+		}
 
 		figure {
 			margin: 0;
@@ -115,17 +122,25 @@ footer {
 			svg {
 				max-width: 100%;
 				margin-bottom: 1rem;
-
+				@keyframes circle-center {
+					0%{
+						transform: scale(1);
+					}
+					100% {
+						transform: scale(10);
+					}
+				}
 				.center {
 					fill: $dimmedColor;
 					transform-origin: 50% 50%;
-					transition: transform .2s ease-in-out;
 				}
 
 				&:hover {
 					cursor: pointer;
 					.center {
-						transform: scale(20);
+						animation: circle-center .4s ease-in-out;
+						animation-iteration-count: infinite;
+					  animation-direction: alternate;
 					}
 				}
 
